<resources>
    <string name="app_name">bmp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Best Media Player</string>
    <string name="nav_header_subtitle">vmkiev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_no_repeat">no repeat</string>
    <string name="settings_repeat_all">repeat all</string>
    <string name="settings_repeat_one">repeat one</string>
    <string name="settings_random">random</string>
    <string name="settings_playback_mode">Playback mode</string>
    <string name="setting_fast_forward_time">Fast forward time</string>
    <string name="setting_btn_close">close</string>
    <string name="saved_playback_mode_radio_id_key">com.jonnydev.bmp.playback_mode_radio_id</string>
    <string name="saved_fast_forward_time_key">com.jonnydev.bmp.fast_forward_time</string>
    <string name="settings_file_key">settings_file</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_select_tracks">Select tracks</string>
    <string name="title_activity_select_tracks">Select tracks</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="permission_message">"Can not read media files!\nMake sure, you press 'allow' permission!"</string>
    <string name="permission_positive_btn">OK</string>
    <string name="add_to_playlist">add to playlist</string>
    <string name="selected">selected</string>
    <string name="nav_all_tracks">All tracks</string>
    <string name="label_playlists">Playlists</string>
    <string name="delete_all">Delete all</string>
    <string name="label_all_tracks">All tracks</string>
    <string name="playlist_title">Playlist title</string>
    <string name="btn_create_playlist">Create</string>
    <string name="splash_screen_title">The Best\nMedia Player</string>
    <string name="splash_screen_author">by Jonny</string>
    <string name="splash_screen_title_upd">Tracks updating…</string>
    <string name="nav_update">Update</string>

</resources>
