<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <data>
        <import type="com.jonnydev.bmp.util.Converter"/>
        <variable
                name="settings"
                type="com.jonnydev.bmp.util.Settings"/>
    </data>

    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
        >

            <TextView
                    android:id="@+id/settings_title"
                    android:text="@string/settings_dialog_title"
                    android:textSize="28sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <RadioGroup
                    android:id="@+id/radio_group"
                    android:checkedButton="@={settings.playbackModeRadioId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/settings_title"
            >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_playback_mode"
                        android:textSize="18sp"
                />

                <RadioButton
                        android:id="@+id/radio_no_repeat"
                        android:text="@string/settings_no_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                />

                <RadioButton
                        android:id="@+id/radio_repeat_all"
                        android:text="@string/settings_repeat_all"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                />

                <RadioButton
                        android:id="@+id/radio_repeat_one"
                        android:text="@string/settings_repeat_one"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                />

                <RadioButton
                        android:id="@+id/radio_random"
                        android:text="@string/settings_random"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                />

            </RadioGroup>

            <TextView
                    android:text="@string/setting_fast_forward_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/radio_group"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/title_fast_forward_time"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
            />

            <ImageButton
                    android:id="@+id/btn_subtract_second"
                    android:onClick="@{() -> settings.subtractSecond()}"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_chevron_left_black_24dp"
                    app:layout_constraintStart_toStartOf="@+id/title_fast_forward_time"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/fast_forward_time"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="@+id/fast_forward_time"
                    app:layout_constraintBottom_toBottomOf="@+id/fast_forward_time"
                    tools:ignore="ContentDescription"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
            />

            <TextView
                    android:id="@+id/fast_forward_time"
                    android:text="@{Converter.millisecondsToText(settings.fastForwardTime)}"
                    android:textColor="@android:color/black"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@+id/btn_subtract_second"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btn_add_second"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_fast_forward_time"
            />

            <ImageButton
                    android:id="@+id/btn_add_second"
                    android:onClick="@{() -> settings.addSecond()}"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp"
                    app:layout_constraintStart_toEndOf="@+id/fast_forward_time"
                    app:layout_constraintTop_toTopOf="@+id/fast_forward_time"
                    app:layout_constraintBottom_toBottomOf="@+id/fast_forward_time"
                    tools:ignore="ContentDescription"
                    app:layout_constraintEnd_toEndOf="@+id/title_fast_forward_time"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
            />

            <Button
                    android:id="@+id/btn_setting_close"
                    android:text="@string/setting_btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/fast_forward_time"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

